--- a/live-ingester/pom.xml
+++ b/live-ingester/pom.xml
@@ -8,12 +8,7 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
-	<properties>
-		<maven.compiler.source>17</maven.compiler.source>
-		<maven.compiler.target>17</maven.compiler.target>
-	</properties>
-
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 	<artifactId>live-ingester</artifactId>
 	<name>Alfresco HxInsight Connector :: Live Ingester</name>
 
