ACS-6438 Add clang formatting.
This configuration aims to be similar to our standard Java format used in other projects.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,5 +12,11 @@ repos:
       - id: detect-private-key
       - id: check-case-conflict
       - id: check-yaml
+        exclude: .clang-format
       - id: check-json
       - id: check-xml
+  - repo: https://github.com/pocc/pre-commit-hooks
+    rev: v1.3.5
+    hooks:
+        - id: clang-format
+          args: ["-i"]
