--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,8 @@
 
     <spring-boot.version>3.2.0</spring-boot.version>
     <spring.camel.version>4.2.0</spring.camel.version>
+
+    <acs-event-model.version>0.0.24</acs-event-model.version>
   </properties>
 
   <repositories>
@@ -111,6 +113,11 @@
         <groupId>org.apache.camel.springboot</groupId>
         <artifactId>camel-sjms-starter</artifactId>
         <version>${spring.camel.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.alfresco</groupId>
+        <artifactId>acs-event-model</artifactId>
+        <version>${acs-event-model.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
