ACS-6432 Add docker-compose.

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -96,6 +96,22 @@
                         <version>${maven-resources-plugin.version}</version>
                         <executions>
                             <execution>
+                                <id>copy-resources</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>copy-resources</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>${basedir}/src/main/resources/docker-compose</outputDirectory>
+                                    <resources>
+                                        <resource>
+                                            <directory>${basedir}/src/main/resources/docker-compose-origin</directory>
+                                            <filtering>true</filtering>
+                                        </resource>
+                                    </resources>
+                                </configuration>
+                            </execution>
+                            <execution>
                                 <id>copy-resources-docker-live-indexing</id>
                                 <phase>process-resources</phase>
                                 <goals>
