--- a/live-ingester/src/main/resources/application.properties
+++ b/live-ingester/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-alfresco.ingester.messaging.channel = activemq:queue:org.alfresco.ingester.event
+camel.springboot.main-run-controller = true
+alfresco.ingester.messaging.channel = activemq:topic:alfresco.repo.event2
