--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,20 @@
     <spring.camel.version>4.2.0</spring.camel.version>
 
     <acs-event-model.version>0.0.24</acs-event-model.version>
+
+    <!-- Used by the generated .env file for docker-compose. -->
+    <dist.alfresco.version>23.1.1</dist.alfresco.version>
+    <dist.share.version>23.1.1</dist.share.version>
+    <dist.postgres.version>14.4</dist.postgres.version>
+    <dist.transform.router.version>4.0.1</dist.transform.router.version>
+    <dist.transform.core.aio.version>5.0.1</dist.transform.core.aio.version>
+    <dist.transform.sfs.version>4.0.1</dist.transform.sfs.version>
+    <dist.activemq.version>5.18.3</dist.activemq.version>
+    <dist.activemq.docker.tag>${dist.activemq.version}-jre17-rockylinux8</dist.activemq.docker.tag>
+    <dist.digital.workspace.version>4.3.0</dist.digital.workspace.version>
+    <dist.nginx.version>3.0.0</dist.nginx.version>
+    <dist.elasticsearch.version>7.17.3</dist.elasticsearch.version>
+    <dist.search.enterprise.version>4.0.0.1</dist.search.enterprise.version>
   </properties>
 
   <repositories>
