ACS-6432 Fix PMD build issue.

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -52,7 +52,7 @@
                             </execution>
                             <execution>
                                 <id>copy-resources-for-docker</id>
-                                <phase>generate-resources</phase>
+                                <phase>prepare-package</phase>
                                 <goals>
                                     <goal>copy</goal>
                                 </goals>
