--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
   <modules>
     <module>live-ingester</module>
     <module>distribution</module>
+    <module>test-tools</module>
   </modules>
 
   <scm>
@@ -118,6 +119,11 @@
       <dependency>
         <groupId>org.apache.camel.springboot</groupId>
         <artifactId>camel-aws2-sns-starter</artifactId>
+        <version>${spring.camel.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel.springboot</groupId>
+        <artifactId>camel-aws2-sqs-starter</artifactId>
         <version>${spring.camel.version}</version>
       </dependency>
       <dependency>
