ASC-6376: add sns integration

--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -11,5 +11,5 @@ camel:
 alfresco:
   ingester:
     messaging:
-        in.endpoint: activemq:queue:org.alfresco.ingester.event
+        in.endpoint: activemq:topic:alfresco.repo.event2
         out.endpoint: aws2-sns://arn:aws:sns:us-east-1:000000000000:test-hxinsight-topic
