--- a/distribution/src/main/resources/docker-compose/docker-compose.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose.yml
@@ -180,7 +180,7 @@ services:
     environment:
       SPRING_ACTIVEMQ_BROKERURL: nio://activemq:61616
   localstack:
-    image: localstack/localstack
+    image: localstack/localstack:${LOCALSTACK_TAG}
     ports:
       - "4566:4566"
     environment:
