--- a/distribution/src/main/resources/docker-compose/docker-compose.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose.yml
@@ -179,6 +179,14 @@ services:
       - activemq
     environment:
       SPRING_ACTIVEMQ_BROKERURL: nio://activemq:61616
+  localstack:
+    image: localstack/localstack:${LOCALSTACK_TAG}
+    ports:
+      - "4566:4566"
+    environment:
+      - SERVICES=sns,sqs
+    volumes:
+      - './init-aws.sh:/etc/localstack/init/ready.d/init-aws.sh'
 
 volumes:
   shared-file-store-volume:
