Update ADW and add ACC in docker compose. Add specific versions to pom. Add tags to .env file

--- a/distribution/src/main/resources/docker-compose-origin/.env
+++ b/distribution/src/main/resources/docker-compose-origin/.env
@@ -6,6 +6,7 @@ TRANSFORM_CORE_AIO_TAG=${dist.transform.core.aio.version}
 SHARED_FILE_STORE_TAG=${dist.transform.sfs.version}
 ACTIVE_MQ_TAG=${dist.activemq.docker.tag}
 DIGITAL_WORKSPACE_TAG=${dist.digital.workspace.version}
+CONTROL_CENTER_TAG=${dist.control.center.version}
 ACS_NGINX_TAG=${dist.nginx.version}
 ELASTICSEARCH_TAG=${dist.elasticsearch.version}
 SEARCH_ENTERPRISE_TAG=${dist.search.enterprise.version}
