--- a/distribution/src/main/resources/docker-compose/docker-compose.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose.yml
@@ -124,20 +124,36 @@ services:
     image: quay.io/alfresco/alfresco-digital-workspace:${DIGITAL_WORKSPACE_TAG}
     mem_limit: 128m
     environment:
-      BASEPATH: ./
+      APP_CONFIG_PROVIDER: "ECM"
+      APP_CONFIG_AUTH_TYPE: "BASIC"
+      BASE_PATH: ./
+      APP_BASE_SHARE_URL: "http://localhost:8080/workspace/#/preview/s"
+
+  control-center:
+    image: quay.io/alfresco/alfresco-control-center:${CONTROL_CENTER_TAG}
+    mem_limit: 128m
+    environment:
+      APP_CONFIG_PROVIDER: "ECM"
+      APP_CONFIG_AUTH_TYPE: "BASIC"
+      BASE_PATH: ./
 
   # HTTP proxy to provide HTTP Default port access to services
   proxy:
-    image: quay.io/alfresco/alfresco-acs-nginx:${ACS_NGINX_TAG}
+    image: alfresco/alfresco-acs-nginx:${ACS_NGINX_TAG}
     mem_limit: 128m
+    environment:
+      DISABLE_SYNCSERVICE: "true"
     depends_on:
       - alfresco
+      - digital-workspace
+      - control-center
     ports:
       - 8080:8080
     links:
       - digital-workspace
       - alfresco
       - share
+      - control-center
 
   elasticsearch:
     image: elasticsearch:${ELASTICSEARCH_TAG}
