--- a/pom.xml
+++ b/pom.xml
@@ -68,8 +68,9 @@
     <dist.transform.sfs.version>4.0.1</dist.transform.sfs.version>
     <dist.activemq.version>5.18.3</dist.activemq.version>
     <dist.activemq.docker.tag>${dist.activemq.version}-jre17-rockylinux8</dist.activemq.docker.tag>
-    <dist.digital.workspace.version>4.3.0</dist.digital.workspace.version>
-    <dist.nginx.version>3.0.0</dist.nginx.version>
+    <dist.digital.workspace.version>4.4.0-7099328816</dist.digital.workspace.version>
+    <dist.control.center.version>8.3.0</dist.control.center.version>
+    <dist.nginx.version>3.4.2</dist.nginx.version>
     <dist.elasticsearch.version>7.17.3</dist.elasticsearch.version>
     <dist.search.enterprise.version>4.0.0.1</dist.search.enterprise.version>
     <dist.localstack.version>3.0.2</dist.localstack.version>
