ASC-6376: update new node metadata properties

--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -7,6 +7,7 @@ camel:
       message-group-id-strategy: useExchangeId
       secretKey: dummy_secret_key
       accessKey: dummy_access_key
+  dataformat.jackson.autoDiscoverObjectMapper: true
 
 alfresco:
   ingester:
