--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,11 @@
         <version>${spring.camel.version}</version>
       </dependency>
       <dependency>
+        <groupId>org.apache.camel.springboot</groupId>
+        <artifactId>camel-jackson-starter</artifactId>
+        <version>${spring.camel.version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.alfresco</groupId>
         <artifactId>acs-event-model</artifactId>
         <version>${acs-event-model.version}</version>
