--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,8 @@
     <spring-boot.version>3.2.0</spring-boot.version>
     <spring.camel.version>4.2.0</spring.camel.version>
 
+    <spotless.version>2.41.1</spotless.version>
+
     <acs-event-model.version>0.0.24</acs-event-model.version>
 
     <!-- Used by the generated .env file for docker-compose. -->
@@ -277,6 +279,21 @@
         <configuration>
           <tagNameFormat>@{project.version}</tagNameFormat>
           <autoVersionSubmodules>true</autoVersionSubmodules>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>com.diffplug.spotless</groupId>
+        <artifactId>spotless-maven-plugin</artifactId>
+        <version>2.41.1</version>
+        <configuration>
+          <java>
+            <includes>
+              <include>src/main/java/**/*.java</include>
+            </includes>
+            <eclipse>
+              <file>${project.basedir}/code-formatter.xml</file>
+            </eclipse>
+          </java>
         </configuration>
       </plugin>
     </plugins>
