--- a/pom.xml
+++ b/pom.xml
@@ -284,7 +284,7 @@
       <plugin>
         <groupId>com.diffplug.spotless</groupId>
         <artifactId>spotless-maven-plugin</artifactId>
-        <version>2.41.1</version>
+        <version>${spotless.version}</version>
         <configuration>
           <java>
             <includes>
