ACS-6379: [HxI LI] S3 Credentials - PART I - adding component allowing to upload objects to S3 storage - adding integration test based on Testcontainers - fixed Maven and test config allowing integration tests to run using properties from pom file

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -73,7 +73,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-assembly-plugin</artifactId>
-                        <version>3.6.0</version>
+                        <version>${maven-assembly-plugin.version}</version>
                         <configuration>
                             <finalName>alfresco-hxinsight-connector-distribution-${project.version}</finalName>
                             <appendAssemblyId>false</appendAssemblyId>
