--- a/distribution/src/main/resources/docker-compose-origin/.env
+++ b/distribution/src/main/resources/docker-compose-origin/.env
@@ -1,14 +1,14 @@
-ALFRESCO_TAG=${dist.alfresco.version}
-SHARE_TAG=${dist.share.version}
-POSTGRES_TAG=${dist.postgres.version}
-TRANSFORM_ROUTER_TAG=${dist.transform.router.version}
-TRANSFORM_CORE_AIO_TAG=${dist.transform.core.aio.version}
-SHARED_FILE_STORE_TAG=${dist.transform.sfs.version}
-ACTIVE_MQ_TAG=${dist.activemq.docker.tag}
-DIGITAL_WORKSPACE_TAG=${dist.digital.workspace.version}
-CONTROL_CENTER_TAG=${dist.control.center.version}
-ACS_NGINX_TAG=${dist.nginx.version}
-ELASTICSEARCH_TAG=${dist.elasticsearch.version}
-SEARCH_ENTERPRISE_TAG=${dist.search.enterprise.version}
-LOCALSTACK_TAG=${dist.localstack.version}
-HXI_CONNECTOR_TAG=${project.version}
+ALFRESCO_TAG=@dist.alfresco.version@
+SHARE_TAG=@dist.share.version@
+POSTGRES_TAG=@dist.postgres.version@
+TRANSFORM_ROUTER_TAG=@dist.transform.router.version@
+TRANSFORM_CORE_AIO_TAG=@dist.transform.core.aio.version@
+SHARED_FILE_STORE_TAG=@dist.transform.sfs.version@
+ACTIVE_MQ_TAG=@dist.activemq.docker.tag@
+DIGITAL_WORKSPACE_TAG=@dist.digital.workspace.version@
+CONTROL_CENTER_TAG=@dist.control.center.version@
+ACS_NGINX_TAG=@dist.nginx.version@
+ELASTICSEARCH_TAG=@dist.elasticsearch.version@
+SEARCH_ENTERPRISE_TAG=@dist.search.enterprise.version@
+LOCALSTACK_TAG=@dist.localstack.version@
+HXI_CONNECTOR_TAG=@project.version@
