--- a/pom.xml
+++ b/pom.xml
@@ -303,6 +303,7 @@
               <order>\#,\#org.alfresco,java,javax,jakarta,com,lombok,org,org.alfresco</order>
             </importOrder>
 
+            <removeUnusedImports />
             <formatAnnotations />
           </java>
         </configuration>
