--- a/live-ingester/pom.xml
+++ b/live-ingester/pom.xml
@@ -39,6 +39,10 @@
 			<groupId>org.apache.camel.springboot</groupId>
 			<artifactId>camel-aws2-sns-starter</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.camel.springboot</groupId>
+			<artifactId>camel-jackson-starter</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
