--- a/pom.xml
+++ b/pom.xml
@@ -54,11 +54,10 @@
     <skipUnitTests>${skipTests}</skipUnitTests>
     <skipIntegrationTests>${skipTests}</skipIntegrationTests>
 
+    <acs-event-model.version>0.0.24</acs-event-model.version>
     <spring-boot.version>3.2.0</spring-boot.version>
     <spring-camel.version>4.2.0</spring-camel.version>
     <aws-sdk-s3.version>2.21.42</aws-sdk-s3.version>
-
-    <acs-event-model.version>0.0.24</acs-event-model.version>
 
     <testcontainers.version>1.19.3</testcontainers.version>
 
@@ -186,6 +185,24 @@
     <pluginManagement>
       <plugins>
         <plugin>
+          <artifactId>maven-resources-plugin</artifactId>
+          <version>${maven-resources-plugin.version}</version>
+        </plugin>
+
+        <plugin>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>${maven-assembly-plugin.version}</version>
+        </plugin>
+
+        <plugin>
+          <artifactId>maven-site-plugin</artifactId>
+          <configuration>
+            <skip>true</skip>
+            <skipDeploy>true</skipDeploy>
+          </configuration>
+        </plugin>
+
+        <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>license-maven-plugin</artifactId>
           <version>${license-maven-plugin.version}</version>
@@ -241,11 +258,9 @@
         </plugin>
 
         <plugin>
-          <artifactId>maven-site-plugin</artifactId>
-          <configuration>
-            <skip>true</skip>
-            <skipDeploy>true</skipDeploy>
-          </configuration>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>${jacoco-maven-plugin.version}</version>
         </plugin>
 
         <plugin>
@@ -262,13 +277,18 @@
             </execution>
           </executions>
         </plugin>
+
+        <plugin>
+          <groupId>com.diffplug.spotless</groupId>
+          <artifactId>spotless-maven-plugin</artifactId>
+          <version>${spotless-plugin.version}</version>
+        </plugin>
       </plugins>
     </pluginManagement>
 
     <plugins>
       <plugin>
         <artifactId>maven-resources-plugin</artifactId>
-        <version>${maven-resources-plugin.version}</version>
         <configuration>
           <delimiters>
             <delimiter>@</delimiter>
@@ -310,7 +330,6 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>${jacoco-maven-plugin.version}</version>
         <executions>
           <execution>
             <goals>
@@ -332,10 +351,10 @@
           <autoVersionSubmodules>true</autoVersionSubmodules>
         </configuration>
       </plugin>
+
       <plugin>
         <groupId>com.diffplug.spotless</groupId>
         <artifactId>spotless-maven-plugin</artifactId>
-        <version>${spotless-plugin.version}</version>
         <configuration>
           <java>
             <includes>
@@ -344,11 +363,9 @@
             <eclipse>
               <file>alfresco-formatter.xml</file>
             </eclipse>
-
             <importOrder>
               <order>\#,\#org.alfresco,java,javax,jakarta,com,lombok,org,org.alfresco</order>
             </importOrder>
-
             <removeUnusedImports />
             <formatAnnotations />
           </java>
