[release] ACS-6434 Fix reference to github repository.

--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
   <properties>
     <maven.build.sourceVersion>17</maven.build.sourceVersion>
     <project.scm.organization>Alfresco</project.scm.organization>
-    <project.scm.repository>hxinsight-connector</project.scm.repository>
+    <project.scm.repository>hxi-connector</project.scm.repository>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <project.year>2023</project.year>
