--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ env:
   # As the release is triggered by a commit message with "[release]" keyword on a release branch,
   # setting these variables to new values can be done in the same commit and will indicate the release and the dev versions in it.
   DEVELOPMENT_VERSION: "0.0.2-SNAPSHOT" # The version that will be set in pom files after the release (next dev version)
-  RELEASE_VERSION: "0.0.2-A2" # The version of the release (tag).
+  RELEASE_VERSION: "0.0.2-A3" # The version of the release (tag).
   GITHUB_ACTIONS_DEPLOY_TIMEOUT: 60
   MAVEN_CLI_OPTS: "-B -e -fae -V -DinstallAtEnd=true -DfailIfNoTests=false -U -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn "
   MAVEN_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
@@ -121,12 +121,6 @@ jobs:
       !contains(github.event.head_commit.message, '[skip build]')
     steps:
       - uses: actions/checkout@v3
-      - name: "Login to Quay.io"
-        uses: docker/login-action@v2.1.0
-        with:
-          registry: quay.io
-          username: ${{ secrets.QUAY_USERNAME }}
-          password: ${{ secrets.QUAY_PASSWORD }}
       - uses: Alfresco/alfresco-build-tools/.github/actions/get-build-info@v1.35.2
       - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v1.35.2
       - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v1.35.2
@@ -150,12 +144,6 @@ jobs:
       - uses: actions/checkout@v3
         with:
           persist-credentials: false
-      - name: "Login to Quay.io"
-        uses: docker/login-action@v2.1.0
-        with:
-          registry: quay.io
-          username: ${{ secrets.QUAY_USERNAME }}
-          password: ${{ secrets.QUAY_PASSWORD }}
       - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v1.35.2
       - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v1.35.2
       - uses: Alfresco/alfresco-build-tools/.github/actions/configure-git-author@v1.35.2
@@ -186,8 +174,8 @@ jobs:
       - name: "Clean Maven cache"
         run: bash ./scripts/ci/cleanup_cache.sh
 
-  deploy_release_version_to_quay:
-    name: "Deploy release version to quay.io"
+  deploy_release_version_to_quay_and_dockerhub:
+    name: "Deploy release version to quay.io and Dockerhub"
     runs-on: ubuntu-latest
     needs:
       - test_application
@@ -206,6 +194,11 @@ jobs:
           registry: quay.io
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_PASSWORD }}
+      - name: "Login to Docker Hub"
+        uses: docker/login-action@v2.1.0
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v1.35.2
       - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v1.35.2
       - name: "Build application"
@@ -221,7 +214,7 @@ jobs:
     name: "Copy to S3 Downloads Bucket"
     runs-on: ubuntu-latest
     needs:
-      - deploy_release_version_to_quay
+      - deploy_release_version_to_quay_and_dockerhub
       - release_and_deploy_to_nexus_and_s3
       - publish_snapshot_artifacts
       - push_docker_images
