--- a/distribution/src/main/resources/docker/live-ingester/build.properties
+++ b/distribution/src/main/resources/docker/live-ingester/build.properties
@@ -1,2 +1,2 @@
-DOCKER_IMAGE_REPOSITORY=quay.io/alfresco/alfresco-hxinsight-connector-live-ingester
+DOCKER_IMAGE_REPOSITORY=alfresco/alfresco-hxinsight-connector-live-ingester
 DOCKER_IMAGE_SKIP_PUSH=false
