--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -6,7 +6,7 @@
         <version>0.0.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <name>Alfresco HxInsight Connector :: Distribution zip</name>
+    <name>Alfresco Connector for Hyland Experience Insight :: Distribution zip</name>
     <artifactId>alfresco-hxinsight-connector-distribution</artifactId>
     <packaging>jar</packaging>
 
