--- a/distribution/src/main/resources/docker-compose-origin/.env
+++ b/distribution/src/main/resources/docker-compose-origin/.env
@@ -11,4 +11,4 @@ ACS_NGINX_TAG=@dist.nginx.version@
 ELASTICSEARCH_TAG=@dist.elasticsearch.version@
 SEARCH_ENTERPRISE_TAG=@dist.search.enterprise.version@
 LOCALSTACK_TAG=@dist.localstack.version@
-HXI_CONNECTOR_TAG=@project.version@
+HXINSIGHT_CONNECTOR_TAG=@project.version@
