--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -1,19 +1,12 @@
 camel:
   springboot.main-run-controller: true
-  component:
-    aws2-sns:
-      overrideEndpoint: true
-      uriEndpointOverride: http://localhost:4566
-      message-group-id-strategy: useExchangeId
-      secretKey: dummy_secret_key
-      accessKey: dummy_access_key
   dataformat.jackson.autoDiscoverObjectMapper: true
 
 alfresco:
   ingester:
     messaging:
         in.endpoint: activemq:topic:alfresco.repo.event2
-        out.endpoint: aws2-sns://arn:aws:sns:us-east-1:000000000000:test-hxinsight-topic
+        out.endpoint: http:localhost:8001/ingest?httpMethod=POST
   transform:
     messaging:
       request:
