--- a/pom.xml
+++ b/pom.xml
@@ -58,8 +58,10 @@
     <spring-boot.version>3.2.1</spring-boot.version>
     <spring-camel.version>4.3.0</spring-camel.version>
     <aws-sdk-s3.version>2.22.9</aws-sdk-s3.version>
+    <wiremock.version>3.0.1</wiremock.version>
 
     <testcontainers.version>1.19.3</testcontainers.version>
+    <wiremock-testcontainers-module.version>1.0-alpha-13</wiremock-testcontainers-module.version>
 
     <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
     <maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
@@ -82,6 +84,7 @@
     <dist.elasticsearch.version>7.17.15</dist.elasticsearch.version>
     <dist.search.enterprise.version>4.0.0.1</dist.search.enterprise.version>
     <dist.localstack.version>3.0.2</dist.localstack.version>
+    <dist.wiremock.version>3.3.1</dist.wiremock.version>
   </properties>
 
   <repositories>
@@ -151,6 +154,17 @@
         <artifactId>s3</artifactId>
         <version>${aws-sdk-s3.version}</version>
       </dependency>
+
+      <dependency>
+        <groupId>org.wiremock.integrations.testcontainers</groupId>
+        <artifactId>wiremock-testcontainers-module</artifactId>
+        <version>${wiremock-testcontainers-module.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.github.tomakehurst</groupId>
+        <artifactId>wiremock</artifactId>
+        <version>${wiremock.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -209,11 +223,11 @@
           <executions>
             <execution>
               <id>third-party-licenses</id>
+              <phase>generate-resources</phase>
               <goals>
                 <goal>add-third-party</goal>
                 <goal>download-licenses</goal>
               </goals>
-              <phase>generate-resources</phase>
               <configuration>
                 <failOnMissing>true</failOnMissing>
                 <excludedScopes>provided,test</excludedScopes>
@@ -261,6 +275,13 @@
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
           <version>${jacoco-maven-plugin.version}</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>prepare-agent</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
 
         <plugin>
@@ -282,6 +303,21 @@
           <groupId>com.diffplug.spotless</groupId>
           <artifactId>spotless-maven-plugin</artifactId>
           <version>${spotless-plugin.version}</version>
+          <configuration>
+            <java>
+              <includes>
+                <include>src/*/java/**/*.java</include>
+              </includes>
+              <eclipse>
+                <file>alfresco-formatter.xml</file>
+              </eclipse>
+              <importOrder>
+                <order>\#java|\#javax|\#jakarta,\#,\#org.alfresco,java|javax|jakarta,,org.alfresco</order>
+              </importOrder>
+              <removeUnusedImports />
+              <formatAnnotations />
+            </java>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -330,18 +366,6 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>prepare-agent</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>license-maven-plugin</artifactId>
       </plugin>
 
       <plugin>
@@ -355,22 +379,42 @@
       <plugin>
         <groupId>com.diffplug.spotless</groupId>
         <artifactId>spotless-maven-plugin</artifactId>
-        <configuration>
-          <java>
-            <includes>
-              <include>src/*/java/**/*.java</include>
-            </includes>
-            <eclipse>
-              <file>alfresco-formatter.xml</file>
-            </eclipse>
-            <importOrder>
-              <order>\#java|\#javax|\#jakarta,\#,\#org.alfresco,java|javax|jakarta,,org.alfresco</order>
-            </importOrder>
-            <removeUnusedImports />
-            <formatAnnotations />
-          </java>
-        </configuration>
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>local</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>license-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>third-party-licenses</id>
+                <phase>none</phase>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>distribution</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>license-maven-plugin</artifactId>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
