ACS-6379: [HxI LI] S3 Credentials - PART II - let Camel handle the logic

--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -20,7 +20,8 @@ alfresco:
         &authMethod=Basic\
         &authUsername=${hyland.experience.insight.api.username}\
         &authPassword=${hyland.experience.insight.api.password}\
-        &authenticationPreemptive=true"
+        &authenticationPreemptive=true\
+        &throwExceptionOnFailure=false"
   ingester:
     messaging:
       in.endpoint: activemq:topic:alfresco.repo.event2
