--- a/live-ingester/pom.xml
+++ b/live-ingester/pom.xml
@@ -50,6 +50,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-mock</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>software.amazon.awssdk</groupId>
 			<artifactId>s3</artifactId>
 			<scope>test</scope>
