ACS-6379: Fixed Maven build (run) warning

--- a/pom.xml
+++ b/pom.xml
@@ -273,6 +273,7 @@
         <plugin>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
+          <version>${spring-boot.version}</version>
           <configuration>
             <classifier>app</classifier>
           </configuration>
