ACS-6597: change out endpoint in docker-compose

--- a/distribution/src/main/resources/docker-compose/docker-compose.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose.yml
@@ -195,6 +195,7 @@ services:
       - activemq
     environment:
       SPRING_ACTIVEMQ_BROKERURL: nio://activemq:61616
+      ALFRESCO_INGESTER_MESSAGING_OUT_ENDPOINT: log:org.alfresco.hxi_connector.live_ingester?level=DEBUG
 
   localstack:
     image: localstack/localstack:${LOCALSTACK_TAG}
